force-app/main/default/objects/Profile_View__c/Profile_View__c.object-meta.xml
<CustomObject>
    <description>Tracks employer views of masked candidate profiles for Rescue dashboard interest signals.</description>
    <label>Profile View</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Profile View ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>