force-app/main/default/objects/Profile_View__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profile Views</relationshipLabel>
    <relationshipName>Profile_Views</relationshipName>
    <type>Lookup</type>
</CustomField>