force-app/main/default/objects/Profile_View__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Profile Views</relationshipLabel>
    <relationshipName>Profile_Views</relationshipName>
    <type>Lookup</type>
</CustomField>