force-app/main/default/objects/Profile_View__c/fields/View_Date__c.field-meta.xml
<CustomField>
    <fullName>View_Date__c</fullName>
    <label>View Date</label>
    <type>DateTime</type>
</CustomField>